--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
+    "vue2-google-maps": "^0.10.7",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
