--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
     "sass": "^1.49.8",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
